tests/models/struct/usize/fail/max_items.rs
use dade::model;
#[model]
struct TestModel {
    #[field(max_items = 2)]
    value: usize,
}
fn main() {}
